css/styles.production.css
/* prefixed by https://autoprefixer.github.io (PostCSS: v7.0.26, autoprefixer: v9.7.3) */

a {
  color: #565656;
}

body{
  font-family: 'Karla', sans-serif;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.6;
  background-color: #f1f1f1;
  -webkit-animation: transitionIN 0.75s;
          animation: transitionIN 0.75s;

}

* {
  -webkit-box-sizing: border-box;
          box-sizing: border-box;
}

@-webkit-keyframes transitionIN {
  from {
    opacity: 0;
    -webkit-transform: rotateX(-10deg);
            transform: rotateX(-10deg);
  }

  to {
    opacity: 1;
    -webkit-transform: rotateX(0);
            transform: rotateX(0);
  }
}

@keyframes transitionIN {
  from {
    opacity: 0;
    -webkit-transform: rotateX(-10deg);
            transform: rotateX(-10deg);
  }

  to {
    opacity: 1;
    -webkit-transform: rotateX(0);
            transform: rotateX(0);
  }
}

.page-header {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  padding: 10px 20px 20px 20px;
}

.page-header__item {
  -webkit-box-flex: 0;
      -ms-flex: 0 1 200px;
          flex: 0 1 200px
}

.page-header__item:last-child {
  -webkit-box-flex: 1;
      -ms-flex-positive: 1;
          flex-grow: 1;
  text-align: right;
}

.navigation-list {
  list-style-type: none;
}

.navigation-list li {
  display: inline-block;
  margin-left: 15px;
}

h1 {
  font-family: 'Rubik', sans-serif;
  font-weight: 500;
  font-size: 30px;
  line-height: 1.0;
}

h2 {
  font-family: 'Rubik', sans-serif;
  font-weight: 500;
  font-size: 25px;
  line-height: 1.0;
}

h3 {
  font-family: 'Rubik', sans-serif;
  font-weight: 500;
  font-size: 20px;
  line-height: 1.0;
}



.button {
  border: none;
  display: inline-block;
  font-family: inherit;
  background-color: #565656;
  color: white;
  text-decoration: none;
  padding: 10px;
  border-radius: 3px;
  border-bottom: 2px solid rgba(0, 0, 0, 0.3);
  -webkit-transition: 0.9s;
  -o-transition: 0.9s;
  transition: 0.9s;
}



button {
  border: none;
  display: inline-block;
  font-family: inherit;
  background-color: #565656;
  color: white;
  text-decoration: none;
  padding: 10px;
  border-radius: 3px;
  border-bottom: 2px solid rgba(0, 0, 0, 0.3);
  -webkit-transition: 0.9s;
  -o-transition: 0.9s;
  transition: 0.9s;
}


.button:hover,
.button:focus {
  cursor: pointer;
  opacity: 0.5;
}


a:active {
    color: #fff;
}


.navigation-list__item--active {
  text-decoration: none;
}

.profile {
  max-width: 700px;
  margin: 0 auto;
  text-align: center;
}

.profile__picture {
  float: left;
  width: 250px;
  margin-right: 40px;
  border-radius: 50%;

}
.form-style-1 {
	margin:10px auto;
	max-width: 400px;
	padding: 20px 12px 10px 20px;
}
.form-style-1 li {
	padding: 0;
	display: block;
	list-style: none;
	margin: 10px 0 0 0;
}
.form-style-1 label{
	margin:0 0 3px 0;
	padding:0px;
	display:block;
	font-weight: bold;
}
.form-style-1 input[type=text]{
	box-sizing: border-box;
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	border:1px solid #565656;
	padding: 7px;
	margin:0px;
	-webkit-transition: all 0.30s ease-in-out;
	-moz-transition: all 0.30s ease-in-out;
	-ms-transition: all 0.30s ease-in-out;
	-o-transition: all 0.30s ease-in-out;
	outline: none;
}
.form-style-1 input[type=date]{
	box-sizing: border-box;
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	border:1px solid #565656;
	padding: 7px;
	margin:0px;
	-webkit-transition: all 0.30s ease-in-out;
	-moz-transition: all 0.30s ease-in-out;
	-ms-transition: all 0.30s ease-in-out;
	-o-transition: all 0.30s ease-in-out;
	outline: none;
}
.form-style-1 input[type=datetime]{
	box-sizing: border-box;
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	border:1px solid #565656;
	padding: 7px;
	margin:0px;
	-webkit-transition: all 0.30s ease-in-out;
	-moz-transition: all 0.30s ease-in-out;
	-ms-transition: all 0.30s ease-in-out;
	-o-transition: all 0.30s ease-in-out;
	outline: none;
}
.form-style-1 input[type=number]{
	box-sizing: border-box;
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	border:1px solid #565656;
	padding: 7px;
	margin:0px;
	-webkit-transition: all 0.30s ease-in-out;
	-moz-transition: all 0.30s ease-in-out;
	-ms-transition: all 0.30s ease-in-out;
	-o-transition: all 0.30s ease-in-out;
	outline: none;
}
.form-style-1 input[type=search]{
	box-sizing: border-box;
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	border:1px solid #565656;
	padding: 7px;
	margin:0px;
	-webkit-transition: all 0.30s ease-in-out;
	-moz-transition: all 0.30s ease-in-out;
	-ms-transition: all 0.30s ease-in-out;
	-o-transition: all 0.30s ease-in-out;
	outline: none;
}
.form-style-1 input[type=time]{
	box-sizing: border-box;
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	border:1px solid #565656;
	padding: 7px;
	margin:0px;
	-webkit-transition: all 0.30s ease-in-out;
	-moz-transition: all 0.30s ease-in-out;
	-ms-transition: all 0.30s ease-in-out;
	-o-transition: all 0.30s ease-in-out;
	outline: none;
}
.form-style-1 input[type=url]{
	box-sizing: border-box;
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	border:1px solid #565656;
	padding: 7px;
	margin:0px;
	-webkit-transition: all 0.30s ease-in-out;
	-moz-transition: all 0.30s ease-in-out;
	-ms-transition: all 0.30s ease-in-out;
	-o-transition: all 0.30s ease-in-out;
	outline: none;
}
.form-style-1 input[type=email]{
	box-sizing: border-box;
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	border:1px solid #565656;
	padding: 7px;
	margin:0px;
	-webkit-transition: all 0.30s ease-in-out;
	-moz-transition: all 0.30s ease-in-out;
	-ms-transition: all 0.30s ease-in-out;
	-o-transition: all 0.30s ease-in-out;
	outline: none;
}
textarea{
	box-sizing: border-box;
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	border:1px solid #565656;
	padding: 7px;
	margin:0px;
	-webkit-transition: all 0.30s ease-in-out;
	-moz-transition: all 0.30s ease-in-out;
	-ms-transition: all 0.30s ease-in-out;
	-o-transition: all 0.30s ease-in-out;
	outline: none;
}
select{
	box-sizing: border-box;
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	border:1px solid #565656;
	padding: 7px;
	margin:0px;
	-webkit-transition: all 0.30s ease-in-out;
	-moz-transition: all 0.30s ease-in-out;
	-ms-transition: all 0.30s ease-in-out;
	-o-transition: all 0.30s ease-in-out;
	outline: none;
}
.form-style-1 input[type=text]:focus{
	-webkit-box-shadow: 0 0 8px #565656;
	box-shadow: 0 0 8px #565656;
	border: 1px solid #565656;
}
.form-style-1 input[type=date]:focus{
	-webkit-box-shadow: 0 0 8px #565656;
	box-shadow: 0 0 8px #565656;
	border: 1px solid #565656;
}
.form-style-1 input[type=datetime]:focus{
	-webkit-box-shadow: 0 0 8px #565656;
	box-shadow: 0 0 8px #565656;
	border: 1px solid #565656;
}
.form-style-1 input[type=number]:focus{
	-webkit-box-shadow: 0 0 8px #565656;
	box-shadow: 0 0 8px #565656;
	border: 1px solid #565656;
}
.form-style-1 input[type=search]:focus{
	-webkit-box-shadow: 0 0 8px #565656;
	box-shadow: 0 0 8px #565656;
	border: 1px solid #565656;
}
.form-style-1 input[type=time]:focus{
	-webkit-box-shadow: 0 0 8px #565656;
	box-shadow: 0 0 8px #565656;
	border: 1px solid #565656;
}
.form-style-1 input[type=url]:focus{
	-webkit-box-shadow: 0 0 8px #565656;
	box-shadow: 0 0 8px #565656;
	border: 1px solid #565656;
}
.form-style-1 input[type=email]:focus{
	-webkit-box-shadow: 0 0 8px #565656;
	box-shadow: 0 0 8px #565656;
	border: 1px solid #565656;
}
.form-style-1 textarea:focus{
	-webkit-box-shadow: 0 0 8px #565656;
	box-shadow: 0 0 8px #565656;
	border: 1px solid #565656;
}
.form-style-1 select:focus{
	-webkit-box-shadow: 0 0 8px #565656;
	box-shadow: 0 0 8px #565656;
	border: 1px solid #565656;
}
.form-style-1 .field-divided{
	width: 49%;
}

.form-style-1 .field-long{
	width: 100%;
}
.form-style-1 .field-select{
	width: 100%;
}
.form-style-1 .field-textarea{
	height: 100px;
}

.form-style-1 .required{
	color:red;
}

.contact-formtext {
  text-align: center;
}

.contact-block {
  margin: 20px;
  text-align: center;
}


.page-footer {
  clear: both;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  text-align: center;
}

.grid-tittle {
  margin-left: 20px;
}

.grid__item {
  display: inline-block;
  width: 33%
}

.grid {
  display: -ms-grid;
  display: grid;
  -ms-grid-columns: 1fr 20px 1fr 20px 1fr;
  grid-template-columns: 1fr 1fr 1fr;
  grid-gap: 20px;
  margin: 20px

}

.grid__item {
  background-color: #D3D3D3;
  padding: 10px;
  width: auto;

}

.grid__item:last-child {
  -ms-grid-column: 3;
      grid-column-start: 3;
  -ms-grid-column-span: 0;
  grid-column-end: 3;
  -ms-grid-row: 1;
      grid-row-start: 1;
  -ms-grid-row-span: 2;
  grid-row-end: 3;
  background-color:#4C4C4C;
  color: #fff
}

.link-contact-me {
  color: #fff;
}

.about-text {
  margin: 20px;
  text-align: center;
}

@keyframes transitionIN {
  from {
    opacity: 0;
    -webkit-transform: rotateX(-10deg);
            transform: rotateX(-10deg);
  }

  to {
    opacity: 1;
    -webkit-transform: rotateX(0);
            transform: rotateX(0);
  }
}

@-webkit-keyframes color-change {
  from {
    fill: #edc655;
  }
  to {
    fill: #f76414;
  }
}

@keyframes color-change {
  from {
    fill: #edc655;
  }
  to {
    fill: #f76414;
  }
}

@-webkit-keyframes cloud-move {
  from {
    -webkit-transform: translate(0, 50px);
            transform: translate(0, 50px);
  }
  to {
    -webkit-transform: translate(200px,50px);
            transform: translate(200px,50px);
  }
}

@keyframes cloud-move {
  from {
    -webkit-transform: translate(0, 50px);
            transform: translate(0, 50px);
  }
  to {
    -webkit-transform: translate(200px,50px);
            transform: translate(200px,50px);
  }
}

@-webkit-keyframes cloud-move-reverse {
  from {
    -webkit-transform: translate(446px,48px);
            transform: translate(446px,48px);
  }
  to {
    -webkit-transform: translate(100px,48px);
            transform: translate(100px,48px);
  }
}

@keyframes cloud-move-reverse {
  from {
    -webkit-transform: translate(446px,48px);
            transform: translate(446px,48px);
  }
  to {
    -webkit-transform: translate(100px,48px);
            transform: translate(100px,48px);
  }
}

.cloud-front {
  -webkit-animation-duration: 30s;
          animation-duration: 30s;
  -webkit-animation-name: cloud-move;
          animation-name: cloud-move;
  -webkit-animation-iteration-count: infinite;
          animation-iteration-count: infinite;
  -webkit-animation-direction: alternate;
          animation-direction: alternate;
  -webkit-animation-timing-function: linear;
          animation-timing-function: linear;
}

.cloud-back {
  -webkit-animation: 30s cloud-move-reverse infinite alternate linear;
          animation: 30s cloud-move-reverse infinite alternate linear;
}

.sun {
  -webkit-animation-duration: 4s;
          animation-duration: 4s;
  -webkit-animation-name: color-change;
          animation-name: color-change;
  -webkit-animation-iteration-count:  infinite;
          animation-iteration-count:  infinite;
  -webkit-animation-direction: alternate;
          animation-direction: alternate;
  -webkit-animation-timing-function: linear;
          animation-timing-function: linear;
}

@media all and (max-width: 500px) {
  .grid {
    -ms-grid-columns: 1fr;
    grid-template-columns: 1fr;
  }
}
@media all and (min-width: 500px) and (max-width: 750px){
  .grid {
    -ms-grid-columns: 1fr 20px 1fr;
    grid-template-columns: 1fr 1fr;
  }
}
@media all and (max-width: 750px) {
  .grid {
    grid-gap: 10px;
  }
  .grid__item:last-child {
    grid-column: auto / auto;
    grid-row: auto / auto;
  }
  h1 {
    font-size: 22px;
  }
}

